--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+build==0.8.0
 click==8.1.3
 dnspython==2.2.1
 email-validator==1.2.1
@@ -12,6 +13,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 packaging==21.3
+pep517==0.12.0
 pyparsing==3.0.9
 python-dotenv==0.20.0
 python-slugify==6.1.2
