--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,5 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
 version_scheme = "release-branch-semver"
-local_scheme = "node-and-date"
+local_scheme = "no-local-version"
 write_to = "src/__version__.py"
