only include min css/js

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,7 @@
 include *.txt
 recursive-include src *.html
-recursive-include src *.css
-recursive-include src *.js
+recursive-include src *.min.css
+recursive-include src *.min.js
 recursive-include src *.json
 recursive-include src *.png
 recursive-include src *.jpg
